# codeinsight-sdk-python

./: CODEOWNERS  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pylintrc  pyproject.toml  renovate.json5
.github/workflows/: draft-release.yml  release-package.yml  testing.yml
codeinsight_sdk/: __init__.py  client.py  errors.py  exceptions.py  experimental.py  handler.py  handlers.py  models.py  testing.py
codeinsight_sdk/handlers/: __init__.py  component.py  file.py  folder.py  inventory.py  job.py  license.py  project.py  report.py  rule.py  task.py  user.py  vulnerability.py
docs/: swagger.json
examples/: example-1-list-projects.py  example-2-get-project.py  example-9-dataframe.py  requirements.examples.txt  shared.py
tests/: test_client.py  test_experimental.py  test_handlers.py  test_missing_endpoints.py  test_models.py  test_not_implemented.py
